--- a/layouts/partials/404.html
+++ b/layouts/partials/404.html
@@ -2,6 +2,11 @@
   <div class="error">
     <h1>404</h1>
     <h2>{{ i18n "page_not_found" }}</h2>
+    {{ if and (isset .Site.Params "notfoundurl") (not (isset .Site.Params "gravatar")) }}
+      {{ with .Site.Params.notfoundurl }}
+        <div><img src="{{ . | relURL }}" alt="avatar"></div>
+      {{ end }}
+    {{ end }}
     <p>{{ i18n "page_does_not_exist" }}<br />{{ i18n "head_back" .Site.BaseURL | safeHTML }}</p>
   </div>
 </section>
